--- a/HebrewIndexingTools/pom.xml
+++ b/HebrewIndexingTools/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>HebrewIndexingTools</groupId>
     <artifactId>HebrewIndexingTools</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>../wikixmlj</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>org.jsoup</groupId>
