--- a/HebrewIndexingTools/pom.xml
+++ b/HebrewIndexingTools/pom.xml
@@ -37,11 +37,11 @@
             <artifactId>lucene-core</artifactId>
             <version>4.10.3</version>
         </dependency>
-        <dependency>
-            <groupId>com.code972.hebmorph</groupId>
-            <artifactId>hebmorph-lucene</artifactId>
-            <version>2.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.code972.hebmorph</groupId>-->
+            <!--<artifactId>hebmorph-lucene</artifactId>-->
+            <!--<version>2.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
     </dependencies>
 
 </project>
