--- a/HebrewIndexingTools/pom.xml
+++ b/HebrewIndexingTools/pom.xml
@@ -11,6 +11,18 @@
     <modules>
         <module>../wikixmlj</module>
     </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>org.jsoup</groupId>
