--- a/HebrewIndexingTools/pom.xml
+++ b/HebrewIndexingTools/pom.xml
@@ -3,58 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
 
-    <groupId>HebrewIndexingTools</groupId>
-    <artifactId>HebrewIndexingTools</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>../wikixmlj</module>
-    </modules>
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <dependencies>
-        <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>1.8.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.3</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.elasticsearch</groupId>
-            <artifactId>elasticsearch</artifactId>
-            <version>1.4.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-core</artifactId>
-            <version>4.10.3</version>
-        </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.code972.hebmorph</groupId>-->
-            <!--<artifactId>hebmorph-lucene</artifactId>-->
-            <!--<version>2.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
-    </dependencies>
-
+    <parent>
+        <artifactId>hebrew-indexing-tools</artifactId>
+        <groupId>com.code972.indexing</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    <artifactId>hebrew</artifactId>
+    
 </project>
 
