--- a/wikixmlj/pom.xml
+++ b/wikixmlj/pom.xml
@@ -3,30 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>HebrewIndexingTools</artifactId>
-        <groupId>HebrewIndexingTools</groupId>
+        <artifactId>hebrew-indexing-tools</artifactId>
+        <groupId>com.code972.indexing</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../HebrewIndexingTools/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>wikixmlj</artifactId>
+    <packaging>jar</packaging>
     <dependencies>
-        <dependency>
-            <groupId>org.bluestemsoftware.open.maven.tparty</groupId>
-            <artifactId>xerces-impl</artifactId>
-            <version>2.9.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.ant</groupId>
-            <artifactId>ant-compress</artifactId>
-            <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
     </dependencies>
 
 </project>
